--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-CONSUMER_KEY=
-CONSUMER_SECRET=
-ACCESS_TOKEN_KEY=
-ACCESS_TOKEN_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN_KEY=
+TWITTER_ACCESS_TOKEN_SECRET=
+
+SLACK_APP_ID=
+SLACK_CLIENT_ID=
+SLACK_CLIENT_SECRET=
+SLACK_SIGNING_SECRET=
+SLACK_VERIFICATION_TOKEN=
