--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "webpack --config ./build/webpack.dev.js --watch",
     "precommit": "lint-staged",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('Please install dependencies using Yarn.')\""
   },
@@ -15,12 +15,22 @@
     ]
   },
   "dependencies": {
+    "@slack/client": "^4.8.0",
     "dotenv-safe": "^6.1.0",
+    "express": "^4.16.4",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
-    "prettier": "^1.15.1"
+    "nodemon-webpack-plugin": "^3.0.1",
+    "prettier": "^1.15.1",
+    "source-map": "^0.7.3",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2",
+    "webpackbar": "^3.1.2"
   }
 }
