add mongoose, init db

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
 SLACK_SIGNING_SECRET=
 SLACK_VERIFICATION_TOKEN=
+
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
