--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@slack/client": "^4.8.0",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
+    "mongoose": "^5.3.12",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.3.1",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
     "nodemon-webpack-plugin": "^3.0.1",
