--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
+    "cron": "^1.5.0",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
+    "@types/cron": "^1.3.0",
     "@types/mongoose": "^5.3.1",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
