--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@types/cron": "^1.3.0",
