--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack --config ./build/webpack.dev.js --watch",
-    "precommit": "lint-staged",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('Please install dependencies using Yarn.')\""
   },
   "lint-staged": {
@@ -16,12 +15,15 @@
   },
   "dependencies": {
     "@slack/client": "^4.8.0",
+    "cron": "^1.5.0",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@types/cron": "^1.3.0",
     "@types/mongoose": "^5.3.1",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
